fixed user avatar, fixed text readability issues, made card backgrounds and sizes more consistient

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,6 +30,11 @@ body {
   background-position: center;
 }
 
+h1 {
+  color: #4a3f47;
+  text-shadow: 0px 1px 1px #555;
+}
+
 .angular-google-map-container {
   height: 400px;
   width: 80%;
@@ -37,7 +42,7 @@ body {
 }
 
 .transparent-box {
-  background-color: rgba(255, 255, 255, 0.25);
+  background-color: rgba(255, 255, 255, 0.5);
   border-radius: 10px;
   padding: 10px;
 
@@ -88,9 +93,9 @@ body {
 }
 
 .card-small {
-  background-color: lightgray;
+  background-color: rgba(255, 255, 255, 0.5);
   border-radius: 5px;
-  width: 300px;
+  width: 250px;
   //height: 300px;
   margin: 20px;
 
@@ -105,7 +110,7 @@ body {
 }
 
 .card-wide {
-  background-color: lightgray;
+  background-color: rgba(255, 255, 255, 0.5);
   border-radius: 5px;
   margin: 20px;
 
@@ -144,6 +149,8 @@ body {
   width: 600px;
   margin: auto;
 }
+
+
 
 
 @media(min-width:768px) {
